--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -18,3 +18,6 @@ xpack.monitoring.enabled: false
 xpack.graph.enabled: false
 xpack.watcher.enabled: false
 xpack.ml.enabled: false
+
+MAX_LOCKED_MEMORY: unlimited
+bootstrap.memory_lock: true
