--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,7 +1,7 @@
 ARG ELK_VERSION
 
 # https://github.com/elastic/kibana-docker
-FROM docker.elastic.co/kibana/kibana:${ELK_VERSION}
+FROM docker.elastic.co/kibana/kibana-oss:${ELK_VERSION}
 
 ARG ELK_VERSION
 
