增加对kafka的支持

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,6 +6,13 @@ input {
         key         => "lumen_log_list"
         timeout     => 5
     }
+
+    kafka {
+        bootstrap_servers => "172.24.15.138:9092"
+        group_id => "logstash"
+        topics => ["log"]
+        codec => json
+    }
 }
 
 ## Add your filters / logstash plugins configuration here
