--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -8,7 +8,7 @@ input {
     }
 
     kafka {
-        bootstrap_servers => "192.168.3.92:9092"
+        bootstrap_servers => "kafka.log.com:9092"
         group_id => "logstash"
         topics => ["log"]
         codec => json
